# SmartCalc_v2.0

./: .gitignore  README.md
src/: Makefile
src/headers/: controller.h  model.h  view.h
src/sources/: CMakeLists.txt  main.cpp  model.cpp  view.cpp
src/sources/qcustomplot/: CMakeLists.txt
src/tests/: tests.cpp
